[gd_scene load_steps=6 format=3 uid="uid://6wqxmw2vokg2"]

[ext_resource type="Script" path="res://characters/enemies/enemy_base.gd" id="1_6cwuq"]
[ext_resource type="PackedScene" uid="uid://cx7e2bwi2l7h3" path="res://components/health/health.tscn" id="2_3h5nx"]
[ext_resource type="PackedScene" uid="uid://cwgbesasfx62a" path="res://components/hitbox/hitbox.tscn" id="3_8bcgd"]
[ext_resource type="PackedScene" uid="uid://b547eiqrskj6c" path="res://components/damage_area/damage_area.tscn" id="3_kbrri"]
[ext_resource type="Script" path="res://components/state_machine/state_machine.gd" id="4_rk02a"]

[node name="EnemyBase" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_6cwuq")
speed = 125.0
distance_to_attack = 26.0
provides_collision = 4
scan_collision = 5
takes_damage = 8
provide_damage = 2

[node name="PhysicCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 0.5)

[node name="Health" parent="." instance=ExtResource("2_3h5nx")]

[node name="DamageArea" parent="." instance=ExtResource("3_kbrri")]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]

[node name="HitBox" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_8bcgd")]
health_component = NodePath("../Health")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_rk02a")

[connection signal="died" from="Health" to="." method="_on_died"]
